# melodist

./: .git-blame-ignore-revs  .gitignore  .travis.yml  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  pypi-release.yml
docs/: Makefile
docs/source/: conf.py  index.rst  melodist.rst  melodist.util.rst  modules.rst
examples/: example.py  examples.ipynb  precip5min_example.ipynb  read_knmi_data.py
melodist/: __init__.py  cascade.py  data_io.py  data_reader.py  humidity.py  precipitation.py  radiation.py  station.py  stationstatistics.py  temperature.py  wind.py
melodist/util/: bunch.py  util.py
tests/: funcs.py  test_humidity.py  test_io.py  test_precipitation.py  test_precipitation_5min.py  test_radiation.py  test_station.py  test_temperature.py  test_wind.py  util.py
