[metadata]
name = melodist
version = attr: melodist.__version__.__version__
author = Kristian Förster, Florian Hanzer, Benjamin Winter, Thomas Marke, Siling Chen
author_email = foerster@iww.uni-hannover.de
description = MELODIST: MEteoroLOgical observation time series DISaggregation Tool
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
license_file = Licence_GPLv3.txt
url = https://github.com/kristianfoerster/melodist
platforms = any

classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Atmospheric Science
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
python_requires = >=3.8
zip_safe = False
include_package_data = True
packages = find:

install_requires =
    numpy
    pandas
    scipy

[options.packages.find]
exclude = docs

[options.extras_require]
test =
    pytest
